Section 9 - starting - Avatar Hover

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,10 @@
       <main>
         <section class="profile">
           <div class="profile__avatar-info">
-            <img class="avatar profile__avatar" />
+            <img class="avatar profile__avatar" id="avatar" />
+            <div class="profile__avatar-edit">
+              <button class="profile__avatar-pen" type="button"></button>
+            </div>
             <div class="profile__info">
               <div class="profile__name-pen">
                 <h1 class="profile__name"></h1>
