--- a/src/index.html
+++ b/src/index.html
@@ -174,6 +174,32 @@
       </div>
     </div>
 
+    <div class="modal" id="avatar-edit">
+      <div class="modal__container">
+        <button class="modal__close" type="button"></button>
+        <div class="modal__content">
+          <h3 class="modal__heading">Change profile picture</h3>
+          <form class="modal__form" name="avatar-edit" novalidate>
+            <label class="modal__label">
+              <input
+                type="url"
+                class="modal__input"
+                placeholder="Profile Image URL"
+                required
+                minlength="2"
+                maxlength="40"
+                id="avatar-url"
+                name="avatar-url-name"
+              />
+              <span class="modal__line"></span>
+              <span class="modal__input-error" id="avatar-url-error"></span>
+            </label>
+            <button type="submit" class="modal__submit">Save</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <!--<script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/Card.js" type="module"></script>
     <script src="./scripts/utils.js" type="module"></script>
